--- a/css/style.css
+++ b/css/style.css
@@ -18,13 +18,12 @@ body {
     font-family: 'Poppins', sans-serif;
     color: var(--light);
     background-color: var(--dark);
-    width: 100%;
 }
 
 header{
     display: flex;
     justify-content: center;
-    width: 100%;
+    width: 100vw;
     height: 5rem;
     position: fixed;
     z-index: 9999;
@@ -92,7 +91,7 @@ header{
 }
 
 section{
-    width: 100%;
+    max-width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -256,6 +255,76 @@ section .bg-landing-page::after {
     color: var(--primary);
 }
 
+/* skills section */
+
+.skill h2 {
+    text-align: center;
+    padding: 3rem 7% 2rem;
+    font-size: 2.3rem;
+    text-shadow: 1px 1px 3px var(--shadow);
+}
+
+.skill h2::after {
+    content: "";
+    display: block;
+    border: 1px solid var(--primary);
+    transform: scaleX(.1);
+
+}
+
+.skill h2 span {
+    color: var(--primary);
+}
+
+.skill .skill-body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 100vw;
+    padding-bottom:5rem;
+}
+
+.skill .skill-container{
+    max-width: 95%;
+    width: 100%;
+    position: relative;
+    background-color: #0a0a0a;
+    box-shadow: inset 0px 0px 10px 5px rgba(0, 0, 0, 0.856);
+    border-radius: 10px;
+    border: 3px solid rgb(24, 24, 24);
+}
+
+
+.skill .skill-container .skill-content{
+    margin: 0 10px;
+    padding: 2rem 1rem 3rem 1rem;  
+}
+
+.skill .skill-container .skill-content .skill-wrapper {
+}
+
+.skill .skill-container .skill-content .skill-wrapper .card{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 10rem;
+}
+
+.skill .skill-container .skill-content .skill-wrapper .card .image{
+    width: 5.5rem;
+    height: 5.5rem;
+}
+
+.skill .skill-container .skill-content .skill-wrapper .card .image img{
+    width: 100%;
+    height: 100%;
+}
+
+.skill .skill-container .skill-content .skill-wrapper .card .image .iot{
+    border-radius: 20%;
+}
+
+
 /* project section */
 
 section .bg-project{
@@ -324,55 +393,6 @@ section .bg-project{
     font-size: 1.2rem;
 }
 
-/* skills srction */
-.skill h2 {
-    text-align: center;
-    padding: 4rem 7% 2rem;
-    font-size: 2.3rem;
-    text-shadow: 1px 1px 3px var(--shadow);
-}
-
-.skill h2::after {
-    content: "";
-    display: block;
-    border: 1px solid var(--primary);
-    transform: scaleX(.12);
-}
-
-.skill span {
-    color: var(--primary);
-}
-
-.skill .row{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 1.2rem 2%;
-    margin-bottom: 5rem;
-}
-
-.skill .row .skill-list{
-    display: flex;
-}
-
-.swiper-button-next{
-    right: 0;
-}
-.swiper-button-prev{
-    left: 0;
-}
-
-.skill .row .skill-list .card{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
-    margin: 0px 0 20px 0;
-}
-
-.skill .row .skill-list .card img{
-    height: 5rem;
-}
 
 /* contact section */
 
