--- a/css/style.css
+++ b/css/style.css
@@ -290,17 +290,14 @@ section .bg-landing-page::after {
     position: relative;
     background-color: #0a0a0a;
     box-shadow: inset 0px 0px 10px 5px rgba(0, 0, 0, 0.856);
-    border-radius: 10px;
     border: 3px solid rgb(24, 24, 24);
+    border-radius: 10px;
 }
 
 
 .skill .skill-container .skill-content{
     margin: 0 10px;
     padding: 2rem 1rem 3rem 1rem;  
-}
-
-.skill .skill-container .skill-content .skill-wrapper {
 }
 
 .skill .skill-container .skill-content .skill-wrapper .card{
@@ -395,9 +392,7 @@ section .bg-project{
 
 
 /* contact section */
-
-
-/* .contact h2 {
+.contact h2 {
     text-align: center;
     padding: 6rem 7% 2rem;
     font-size: 2.3rem;
@@ -408,29 +403,99 @@ section .bg-project{
     content: "";
     display: block;
     border: 1px solid var(--primary);
-    transform: scaleX(.15);
+    transform: scaleX(.1);
+
 }
 
-.contact span {
+.contact h2 span {
     color: var(--primary);
 }
 
-.contact .contact-row {
-    padding: 1.2rem 7% 7rem;
+.contact .contact-container{
+    max-width:100vw;
+}
+.contact .contact-container .contact-content{
+    display: flex;
 }
 
-.contact .contact-row .wrap{
-    display: flex;
-    flex-wrap: wrap;
-    background-color: tan;
-    width: 100%;
-    position: relative;
+.contact .contact-container .contact-content .contact-info{
+    width: 40%;
+    padding: 20px;
 }
 
-.contact .contact-row .wrap .contact-card{
+.contact .contact-container .contact-content .contact-wrapper{
     display: flex;
-    background-color: blueviolet;
-} */
+    width: 60%;
+    padding: 20px;
+
+}
+
+.contact .contact-container .contact-content .contact-wrapper form{
+    display: flex;
+    flex-direction: column;
+    width: 95%;
+    gap: 15px;
+    padding: 1rem 0;
+    background-color: #0a0a0a;
+    box-shadow: inset 0px 0px 10px 5px rgba(0, 0, 0, 0.856);
+    border: 3px solid rgb(24, 24, 24);
+    border-radius: 10px;
+}
+
+.contact .contact-container .contact-content .contact-wrapper form label{
+    margin:0 5% ;
+    font-size: 1.1rem;
+}
+
+.contact .contact-container .contact-content .contact-wrapper form input{
+    padding: 10px;
+    margin:0 5% ;
+    height: 3rem;
+    border-radius: 10px;
+    font-size: 1rem;
+}
+
+.contact .contact-container .contact-content .contact-wrapper form textarea{
+    resize: none;
+    padding: 10px;
+    margin:0 5% ;
+    height: 10rem;
+    border-radius: 10px;
+    font-size: 1rem;
+    font-family: 'Poppins', sans-serif;
+}
+
+.contact .contact-container .contact-content .contact-wrapper button{
+    text-shadow: 1px 1px 3px var(--shadow);
+    box-shadow: 1px 1px 3px var(--shadow);
+    background-color: var(--primary);
+    color: var(--light);
+    padding: 8px;
+    width: 7rem;
+    height: 2.5rem;    
+    margin: 1.2rem 0 0 5%;
+    border-radius: 5px;
+    font-size: 1rem;
+    font-weight: 600;
+    cursor: pointer;
+    transition: .2s;
+}
+
+.contact .contact-container .contact-content .contact-wrapper button:hover{
+    background-color: var(--light);
+    color: var(--primary);
+}
+
+footer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 8rem 0 1.5rem 0;
+}
+
+.copyright p{
+    font-size: 1rem;
+}
 
 
 /* media queries */
