--- a/css/style.css
+++ b/css/style.css
@@ -237,11 +237,11 @@ section .bg-landing-page::after {
     font-weight: 400;
 }
 
-.about-me .row .desc-btn {
+/* .about-me .row .desc-btn {
     margin-top: 2.5rem;
-}
+} */
 
-.about-me .row .desc-btn a {
+/* .about-me .row .desc-btn a {
     text-align: end;
     padding: 0.5rem 1rem;
     background-color: var(--primary);
@@ -253,7 +253,7 @@ section .bg-landing-page::after {
 .about-me .row .desc-btn a:hover {
     background-color: #fff;
     color: var(--primary);
-}
+} */
 
 /* skills section */
 
@@ -366,11 +366,22 @@ section .bg-project{
 
 
 .project .row .card {
-    background-color: var(--dark);
+    background-color: #0a0a0a;
+    box-shadow: inset 0px 0px 10px 5px rgba(0, 0, 0, 0.856);
+    border: 3px solid rgb(24, 24, 24);
     width: 19.5rem;
     height: 25rem;
     border-radius: 10px;
-    border: 1px solid #4d4d4d;
+    cursor: pointer;
+    transition: 0.2s;
+    /* border: 1px solid #4d4d4d; */
+}
+.project .row .card a{
+    color: #fff;
+}
+
+.project .row .card:hover{
+    transform: scale(1.06);
 }
 
 .project .row .card h3{
@@ -380,13 +391,13 @@ section .bg-project{
 .project .row .card img {
     width: 100%;
     height: 18rem;
-    border: 1px solid #4d4d4d;
-    margin-top: 10px;
+    border: 1px solid  rgb(24, 24, 24);
+    margin-top: 8px;
     /* border-radius: 5px; */
 }
 
 .project .row .card p{
-    margin-top: 10px;
+    /* margin-top: 2%; */
     font-size: 1.2rem;
 }
 
@@ -423,6 +434,48 @@ section .bg-project{
     padding: 20px;
 }
 
+.contact .contact-container .contact-content .contact-info .info-wrapper{
+    margin-bottom: 2.5rem;
+}
+
+.contact .contact-container .contact-content .contact-info .info-wrapper .title-contact{
+    margin-bottom: 0.8rem;
+    font-size: 1.1rem;
+}
+
+.contact .contact-container .contact-content .contact-info .info-wrapper p{
+    font-size: 1rem;
+    font-weight: bolder;
+    color: #8e8e97;
+}
+
+.contact .contact-container .contact-content .contact-info .social-list{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.contact .contact-container .contact-content .contact-info .social-list .list-contact{
+    padding: 10px;
+    background-color: #131313;
+    box-shadow: inset 0px 0px 10px 5px rgba(0, 0, 0, 0.856);
+    border: 3px solid rgb(24, 24, 24);
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.contact .contact-container .contact-content .contact-info .social-list .list-contact:hover{
+    background-color:#414141 ;
+}
+
+.contact .contact-container .contact-content .contact-info .social-list .list-contact .icon a{
+    color: #fff;
+}
+
+.contact .contact-container .contact-content .contact-info .social-list .list-contact .icon i{
+    font-size: 1.7rem;
+}
+
 .contact .contact-container .contact-content .contact-wrapper{
     display: flex;
     width: 60%;
@@ -440,6 +493,7 @@ section .bg-project{
     box-shadow: inset 0px 0px 10px 5px rgba(0, 0, 0, 0.856);
     border: 3px solid rgb(24, 24, 24);
     border-radius: 10px;
+
 }
 
 .contact .contact-container .contact-content .contact-wrapper form label{
@@ -451,7 +505,7 @@ section .bg-project{
     padding: 10px;
     margin:0 5% ;
     height: 3rem;
-    border-radius: 10px;
+    border-radius: 5px;
     font-size: 1rem;
 }
 
@@ -460,7 +514,7 @@ section .bg-project{
     padding: 10px;
     margin:0 5% ;
     height: 10rem;
-    border-radius: 10px;
+    border-radius: 5px;
     font-size: 1rem;
     font-family: 'Poppins', sans-serif;
 }
@@ -487,10 +541,19 @@ section .bg-project{
 }
 
 footer{
+    max-width: 100vw;
     display: flex;
-    align-items: center;
     justify-content: center;
-    padding: 8rem 0 1.5rem 0;
+    align-items: center;
+    padding: 7rem 0 1.5rem 0;
+}
+
+.copyright{
+    height: auto;
+    width: 1200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .copyright p{
@@ -526,10 +589,9 @@ footer{
         top: 100%;
         right: -100%;
         height: 100vh;
-        width: 75vw;
-        background-color: var(--light);
+        width: 60vw;
+        background-color:  rgba(1, 1, 1, 0.925);
         transition: .5s;
-        text-align: center;
     }
 
     .navbar .navbar-link .navbar-menu.active {
@@ -541,7 +603,7 @@ footer{
         display: block;
         color: var(--primary);
         margin: 0;
-        padding: 1.5rem 1rem 1rem 1rem;
+        padding: 1.5rem 1rem 1rem 3rem;
         font-size: 1.5rem;
         font-weight: 600;
     }
@@ -582,12 +644,31 @@ footer{
     html {
         font-size: 55%;
     }
+
 }
 
 /* Mobile Potrait */
 
-@media(max-width: 320px) {
+@media(max-width: 390px) {
     html {
         font-size: 50%;
+    }
+
+    .contact .contact-container .contact-content{
+        flex-direction: column;
+    }
+    .contact .contact-container .contact-content .contact-info{
+        width: 100%;
+    }
+    .contact .contact-container .contact-content .contact-wrapper{
+        width: 100%;
+    }
+    .contact .contact-container .contact-content .contact-info .social-list .list-contact{
+        padding: 5px;
+        border-radius: 5px;
+        border:2px solid rgb(24, 24, 24)
+    }
+    footer{
+        padding: 3rem 0 1.5rem 0;
     }
 }
