--- a/css/style.css
+++ b/css/style.css
@@ -516,7 +516,7 @@ section .bg-project{
     height: 10rem;
     border-radius: 5px;
     font-size: 1rem;
-    font-family: 'Poppins', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .contact .contact-container .contact-content .contact-wrapper .btn-send{
@@ -541,6 +541,22 @@ section .bg-project{
     color: var(--primary);
 }
 
+.contact .contact-container .contact-content .contact-wrapper .btn-loading{
+    display: none;
+    text-shadow: 1px 1px 3px var(--shadow);
+    box-shadow: 1px 1px 3px var(--shadow);
+    background-color: var(--primary);
+    color: var(--light);
+    padding: 7px;
+    width: 7rem;
+    height: 2.5rem;    
+    margin: 1.2rem 0 0 5%;
+    border-radius: 5px;
+    text-align: center;
+    font-size: 1rem;
+    font-weight: 500;
+}
+
 footer{
     max-width: 100vw;
     display: flex;
@@ -560,7 +576,6 @@ footer{
 .copyright p{
     font-size: 1rem;
 }
-
 
 /* media queries */
 /* Laptop */
