--- a/css/style.css
+++ b/css/style.css
@@ -392,7 +392,7 @@ section .bg-project{
     width: 100%;
     height: 18rem;
     border: 1px solid  rgb(24, 24, 24);
-    margin-top: 8px;
+/*     margin-top: 8px; */
     /* border-radius: 5px; */
 }
 
